# supertux-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: rust.yml
src/: assets.rs  lib.rs  main.rs  shader.wgsl  texture.rs
src/graphics/: camera.rs  mod.rs  render.rs  shader.wgsl  sprite.rs
